infra/gitops/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: group-0-b2-dev-deployment
  namespace: group-0-b2-dev
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: workshop-summer-group-0-b2
          image: ghcr.io/kkgo-software-engineering/workshop-summer-group-0-b2:e5884f84dcf9d86386b60a388d8f10df8c906e13
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 20
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "0.5"
              memory: 256Mi
            requests:
                cpu: "0.25"
                memory: 128Mi
